# EineKleine3DRenderer

./: .gitignore  CMakeLists.txt  Package.swift  README.md
include/: Renderer.hpp
src/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Edge.hpp  Face.cpp  Face.hpp  Matrix.cpp  Matrix.hpp  Mesh.cpp  Mesh.hpp  RenderResult.hpp  Renderer.cpp  Renderer.hpp  Vertex.cpp  Vertex.hpp
